@@ -12,8 +12,6 @@ Help is needed:
 
 * GUI, MSW, bug: default/alternative configs use .fityk dir 
 
-* check compilation with GCC 4.4
-
 --------------> 0.8.7
 
 * powder diffraction add-on - Pawley fitting 
